CRUD Grupos de Precificação

--- a/RaellShoes/Views/Administrador/Categorias.cshtml
+++ b/RaellShoes/Views/Administrador/Categorias.cshtml
@@ -35,7 +35,7 @@
     <header id="header" class="d-flex align-items-center">
         <div class="container d-flex align-items-center justify-content-between">
 
-            <h1 class="logo"><a href="admin-index.html">RaellShoes<span>.</span></a></h1>
+            <h1 class="logo"><a href="/administrador">RaellShoes<span>.</span></a></h1>
             <!-- Uncomment below if you prefer to use an image logo -->
             <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt=""></a>-->
 
@@ -45,22 +45,21 @@
                 <li class="dropdown  active">
                     <a href="#"><span>Parâmetros</span> <i class="bi bi-chevron-down"></i></a>
                     <ul>
-                        <li><a href="admin-parametro-grupoprecificacao.html">Grupo de Precificação</a></li>
-                        <li><a href="admin-parametro-fornecedor.html">Fornecedor</a></li>
-                        <li><a href="admin-parametro-categoria.html">Categoria</a></li>
+                        <li><a href="/administrador/GruposPrecificacao">Grupo de Precificação</a></li>
+                        <li><a href="/administrador/Fornecedores">Fornecedor</a></li>
+                        <li><a href="/administrador/Categorias">Categoria</a></li>
                     </ul>
                 </li>
-                <li><a class="nav-link scrollto" href="admin-procurar-cupom.html">Cupons</a></li>
-                <li><a class="nav-link scrollto" href="admin-procurar-troca.html">Trocas</a></li>
-                <li><a class="nav-link scrollto" href="admin-procurar-pedido.html">Pedidos</a></li>
-                <li><a class="nav-link scrollto" href="admin-procurar-cliente.html">Clientes</a></li>
-                <li><a class="nav-link scrollto" href="admin-procurar-produto.html">Produtos</a></li>
+                <li><a class="nav-link scrollto" href="/administrador/Cupons">Cupons</a></li>
+                <li><a class="nav-link scrollto" href="/administrador/Trocas">Trocas</a></li>
+                <li><a class="nav-link scrollto" href="/administrador/Pedidos">Pedidos</a></li>
+                <li><a class="nav-link scrollto" href="/administrador/Clientes">Clientes</a></li>
+                <li><a class="nav-link scrollto" href="/administrador/Produtos">Produtos</a></li>
+                <li><a class="nav-link scrollto" href="/">Sair</a></li>
                 <li><a class="nav-link scrollto" href=""></a></li>
             </ul>
             <i class="bi bi-list mobile-nav-toggle"></i>
         </nav><!-- .navbar -->
-
-
     </header><!-- End Header -->
     <!--Box Clientes-->
     <section id="cliente" class="cliente">
@@ -91,11 +90,11 @@
                 <!--Box Categorias-->
                 <div class="info-wrap" style=" border-radius:20px">
                     <form class="needs-validation" novalidate asp-action="AlterarCategoria">
-                       
+
                         <div class="row">
                             <div class="col-lg-6 col-md-6 form-group mt-3 mt-md-0" id="comb-form">
                                 <span>Nome</span>
-                                <input asp-for="@item.Nome" class="form-control" id="nome" placeholder="Nome do Fornecedor" required name="Nome" >
+                                <input asp-for="@item.Nome" class="form-control" id="nome" placeholder="Nome do Fornecedor" required name="Nome">
 
                                 <div class="invalid-feedback">
                                     *Campo obrigatório
@@ -125,8 +124,8 @@
 
                             <br> <br><br> <br>
                             <div class="col-lg-2 col-md-6 form-group mt-3 mt-md-0" id="comb-form">
-                                <input type="hidden" asp-for="@item.Id" name="Id" />                               
-                             
+                                <input type="hidden" asp-for="@item.Id" name="Id" />
+
                             </div>
                             <div class="row">
                                 <div class="col-lg-6">
@@ -148,10 +147,6 @@
                     </form>
                 </div><br>
             }
-
-
-
-
 
             <!-- Modal Novo Fornecedor -->
             <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -188,11 +183,6 @@
                                             </div>
                                         </form>
                                     </div>
-
-
-
-
-
                                     <br>
                                 </div>
 
@@ -203,9 +193,7 @@
                     </div>
                 </div>
             </div>
-
-
-</section>
+    </section>
 
 
 
