--- a/RaellShoes/Views/Administrador/Produtos.cshtml
+++ b/RaellShoes/Views/Administrador/Produtos.cshtml
@@ -35,7 +35,7 @@
     <header id="header" class="d-flex align-items-center">
         <div class="container d-flex align-items-center justify-content-between">
 
-            <h1 class="logo"><a href="admin-index.html">RaellShoes<span>.</span></a></h1>
+            <h1 class="logo"><a href="/administrador">RaellShoes<span>.</span></a></h1>
             <!-- Uncomment below if you prefer to use an image logo -->
             <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt=""></a>-->
 
@@ -45,22 +45,21 @@
                 <li class="dropdown  active">
                     <a href="#"><span>Parâmetros</span> <i class="bi bi-chevron-down"></i></a>
                     <ul>
-                        <li><a href="admin-parametro-grupoprecificacao.html">Grupo de Precificação</a></li>
-                        <li><a href="admin-parametro-fornecedor.html">Fornecedor</a></li>
-                        <li><a href="admin-parametro-categoria.html">Categoria</a></li>
+                        <li><a href="/administrador/GruposPrecificacao">Grupo de Precificação</a></li>
+                        <li><a href="/administrador/Fornecedores">Fornecedor</a></li>
+                        <li><a href="/administrador/Categorias">Categoria</a></li>
                     </ul>
                 </li>
-                <li><a class="nav-link scrollto" href="admin-procurar-cupom.html">Cupons</a></li>
-                <li><a class="nav-link scrollto" href="admin-procurar-troca.html">Trocas</a></li>
-                <li><a class="nav-link scrollto" href="admin-procurar-pedido.html">Pedidos</a></li>
-                <li><a class="nav-link scrollto" href="admin-procurar-cliente.html">Clientes</a></li>
-                <li><a class="nav-link scrollto" href="admin-procurar-produto.html">Produtos</a></li>
+                <li><a class="nav-link scrollto" href="/administrador/Cupons">Cupons</a></li>
+                <li><a class="nav-link scrollto" href="/administrador/Trocas">Trocas</a></li>
+                <li><a class="nav-link scrollto" href="/administrador/Pedidos">Pedidos</a></li>
+                <li><a class="nav-link scrollto" href="/administrador/Clientes">Clientes</a></li>
+                <li><a class="nav-link scrollto" href="/administrador/Produtos">Produtos</a></li>
+                <li><a class="nav-link scrollto" href="/">Sair</a></li>
                 <li><a class="nav-link scrollto" href=""></a></li>
             </ul>
             <i class="bi bi-list mobile-nav-toggle"></i>
         </nav><!-- .navbar -->
-
-
     </header><!-- End Header -->
     <!--Box Clientes-->
     <section id="cliente" class="cliente">
@@ -170,7 +169,7 @@
                                    minlength="3">
                         </div>
 
-                        
+
 
 
 
@@ -180,7 +179,7 @@
                         Procurar
                     </button><br>
                 </div>
-             </form>
+            </form>
         </div>
 
 
@@ -383,7 +382,7 @@
                                             </div>
                                         </div>
 
-                                          
+
                                         <div class="col-lg-2 col-md-6 form-group mt-3 mt-md-0" id="comb-form">
                                             <span>Categoria</span>
                                             <br>
@@ -437,17 +436,17 @@
 
                                         <div class="col-lg-12 col-md-6 form-group mt-3 mt-md-0" id="comb-form">
                                             <span>Descrição</span>
-                                            <textarea asp-for="Produto.Descricao" type="text"  class="form-control" id="descricao"
-                                                      placeholder="Descrição do Produto"  rows="10" required></textarea>
+                                            <textarea asp-for="Produto.Descricao" type="text" class="form-control" id="descricao"
+                                                      placeholder="Descrição do Produto" rows="10" required></textarea>
                                             <div class="invalid-feedback">
                                                 *Campo obrigatório
                                             </div>
                                         </div>
                                     </div>
 
-                                   
 
-                                
+
+
                                     <br> <br>
 
                                     <div class="row">
@@ -513,7 +512,7 @@
 
                                         <div class="col-lg-12 col-md-6 form-group mt-3 mt-md-0" id="comb-form">
                                             <span>Cuidados com o Produto</span>
-                                            <textarea asp-for="Produto.FichaTecnica.Cuidados" type="text"  class="form-control" id="cuidados-produto"
+                                            <textarea asp-for="Produto.FichaTecnica.Cuidados" type="text" class="form-control" id="cuidados-produto"
                                                       placeholder="Principais cuidados com o Produto" data-rule="minlen:3" rows="5"
                                                       required></textarea>
                                             <div class="invalid-feedback">
@@ -527,7 +526,7 @@
                                     <div>
                                         <button class="btn btn-success col-lg-12">Salvar</button>
                                     </div>
-</form>
+                            </form>
                             <br>
                         </div>
 
@@ -665,7 +664,7 @@
         }
 
         function setarData() {
-            
+
             document.getElementById("data-entrada-novo-produto").value = dataAtualFormatada();
 
         }
