--- a/RaellShoes/Views/Administrador/Produtos.cshtml
+++ b/RaellShoes/Views/Administrador/Produtos.cshtml
@@ -174,8 +174,7 @@
 
 
                     </div><br><br>
-                    <button class="col-lg-12 btn btn-success btn-sm" style="color: white;"
-                            onclick="mostrarResultado()">
+                    <button class="col-lg-12 btn btn-success btn-sm" style="color: white;">
                         Procurar
                     </button><br>
                 </div>
@@ -183,9 +182,9 @@
         </div>
 
 
-
+        
         <!--Últimos Clientes-->
-        <div class="container mt-5" id="resultado" hidden>
+        <div class="container mt-5" id="resultado">
             <!--Box ultimos clientes-->
             <div class="info-wrap" style=" border-radius:20px; text-align: center;">
                 <h5><strong style="  color: rgb(64, 174, 202)">Resultado </strong></h5><br>
@@ -205,42 +204,26 @@
                                     <th scope="col"></th>
                                 </tr>
                             </thead>
-                            <tbody>
-                                <tr>
-                                    <th scope="row">9</th>
-                                    <td>Adidas</td>
-                                    <td>Tênis Runner</td>
-                                    <td>AD76</td>
-                                    <td>40</td>
-                                    <td>Ativo</td>
-                                    <td><button class="btn btn-warning btn-sm">Inativar</button></td>
-                                    <td><a href="admin-listar-produto.html"><button class="btn btn-info btn-sm">Ver Produto</button></td>
-                                    </a>
-                                </tr>
+                            <tbody>                               
 
-                                <tr>
-                                    <th scope="row">69</th>
-                                    <td>Adidas</td>
-                                    <td>Tênis Runner</td>
-                                    <td>JHS77</td>
-                                    <td>42</td>
-                                    <td>Ativo</td>
-                                    <td><button class="btn btn-warning btn-sm">Inativar</button></td>
-                                    <td><a href="admin-listar-produto.html"><button class="btn btn-info btn-sm">Ver Produto</button></td>
-                                    </a>
-                                </tr>
+                                @foreach (var item in Model.Produtos)
+                                {
+                                    <tr>
+                                        <td> @Html.DisplayFor(modelItem => item.Id)</td>
+                                        <td> @Html.DisplayFor(modelItem => item.Marca)</td>
+                                        <td> @Html.DisplayFor(modelItem => item.Nome)</td>
+                                        <td> @Html.DisplayFor(modelItem => item.Modelo)</td>
+                                        <td> @Html.DisplayFor(modelItem => item.Tamanho)</td>
+                                        <td> @Html.DisplayFor(modelItem => item.Status)</td>
+                                        <form>
+                                            <td><button asp-action="InativarProduto" asp-route-id="@item.Id" class="btn btn-warning btn-sm">Inativar</button></td>
+                                        </form>
+                                        <form>
+                                            <td><button asp-action="DetalhesProduto" asp-route-id="@item.Id" class="btn btn-info btn-sm">Ver Produto</button></td>
+                                        </form>
+                                    </tr>
 
-                                <tr>
-                                    <th scope="row">26</th>
-                                    <td>Nike</td>
-                                    <td>Tênis Runner</td>
-                                    <td>AK8</td>
-                                    <td>42</td>
-                                    <td>Inativo</td>
-                                    <td><button class="btn btn-success btn-sm">Ativar</button></td>
-                                    <td><a href="admin-listar-produto.html"><button class="btn btn-info btn-sm">Ver Produto</button></td>
-                                    </a>
-                                </tr>
+                                }                               
 
                             </tbody>
                         </table>
