--- a/RaellShoes/Views/Administrador/DetalhesProduto.cshtml
+++ b/RaellShoes/Views/Administrador/DetalhesProduto.cshtml
@@ -393,7 +393,7 @@
 
                         <!--Form-->
                         <div class="container mt-5">
-                            <form class="needs-validation" novalidate action="">
+                            <form class="needs-validation" novalidate asp-action="InativarProduto">
 
 
                                 <!--Box Inativação-->
@@ -422,17 +422,18 @@
                                     <div class="row">
                                         <div class="col-lg-2 col-md-6 form-group mt-3 mt-md-0" id="comb-form">
                                             <span>Data de Inativação</span>
-                                            <input  class="form-control" id="data-inativacao" type="date" readonly
+                                            <input class="form-control" id="data-inativacao" type="date" readonly
                                                    onload="setarData()">
                                             <div class="invalid-feedback">
                                                 *Campo obrigatório
                                             </div>
                                         </div>
                                         <br> <br>
+                                        <input type="hidden" asp-for="@Model.Produto.Id" name="Id" />
                                         <div>
                                             <button class="btn btn-success col-lg-12">Salvar</button>
                                         </div>
-                            </form>
+</form>
                             <br>
                         </div>
 
